# derivative-machine

./: .gitignore  Cargo.toml  README.md  index-1c958bf722d563ca.js  index-1c958bf722d563ca_bg.wasm  index-e3e90fbc155705eb.js  index-e3e90fbc155705eb_bg.wasm  index.html  main-7b2cfabafddc07e6.css  main.scss
.github/workflows/: deploy.yml
app/: Cargo.toml  index.html  main.scss
app/src/: app.rs  main.rs
derivative-calculator/: Cargo.toml
derivative-calculator/src/: lexer.rs  lib.rs  parser.rs  rule.rs  transformations.rs
derivative-calculator/src/rule/: lexer.rs  parser.rs
derivative-calculator/src/transformations/: derivative.rs  prettify.rs  simplify.rs
src/: app.rs  lexer.rs  main.rs  parser.rs  passes.rs  rule.rs  transformations.rs
src/passes/: derivative.rs  fold.rs  simplify.rs
src/rule/: lexer.rs  parser.rs
src/transformations/: derivative.rs  prettify.rs  simplify.rs
