[package]
authors = ["Luke Chu <lukewchu@outlook.com>"]
edition = "2018"
name = "derivative-calculator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
logos = "0.11.4"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.17"

[dependencies.web-sys]
features = [
  "Document",
  "HtmlInputElement",
  "KeyboardEvent",
  "Window",
]
version = "0.3.45"
