[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
derivative-calculator = { path = "../derivative-calculator" }
log = "0.4.14"
logos = "0.12.0"
sycamore = "0.8.0-beta.1"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = ["KeyboardEvent"]
