[package]
name = "derivative-calculator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"
logos = "0.12.0"

[dependencies.web-sys]
features = [
    "Document",
    "HtmlInputElement",
    "KeyboardEvent",
    "Performance",
    "Window",
]
version = "0.3.56"

[dev-dependencies]
expect-test = "1.2.2"
