[package]
name = "derivative-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
logos = "0.12.1"

[dependencies.web-sys]
features = [
    "Document",
    "HtmlInputElement",
    "KeyboardEvent",
    "Performance",
    "Window",
]
version = "0.3.59"

[dev-dependencies]
expect-test = "1.4.0"
